--- a/adh.html
+++ b/adh.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>제목이 없었네요.</title>
 </head>
 <body>
+	핫도그는 같이 만들어야 한다.
+	혼자 만들기에는 매우 고단한 일이기 때문이다.
 	협업을 해보았다.
-	안도훈
+	서명근 핫도그 좋아함.
+	매우 맛있음.
+
 </body>
 </html>
