--- a/index.html
+++ b/index.html
@@ -197,6 +197,28 @@ VCS is simply a **better Google Drive**
 1. who introduced an issue and when, and more. 
 
 ---
+.left-column[
+  ## Why we need to use GitHub
+  ### - Functionality
+]
+.right-column[
+1. Track work, simplify things
+1. Easier collaboration
+1. Lot of 
+]
+---
+.left-column[
+  ## Why we need to use GitHub
+  ### - Functionality
+  ### - Professional World
+]
+.right-column[
+  1. Everyone else uses it - developer ecosystem
+  1. Easier collaboration
+  1. 
+]
+
+---
 # Learn More
 - Advanced Git apps: [SourceTree](https://www.sourcetreeapp.com/), [GitKraken](https://www.gitkraken.com/)
 - [GitHub intro page](https://guides.github.com/activities/hello-world/)
