--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ VCS is simply a **better Google Drive**
 
 
     </textarea>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
+    <script src="remark-latest.min.js">
     </script>
     <script>
       var slideshow = remark.create();
