--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       .inverse {
         background: #272822;
         color: #777872;
-        text-shadow: 0 0 20px #333;
+        /*text-shadow: 0 0 20px #333;*/
       }
       .inverse h1, .inverse h2 {
         color: #f3f3f3;
