--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@ Pretty much everything I said just now:
   1. Blog
 ]
 ---
+class: middle, center
+#Questions or Comments?
+
+---
 class: middle, center, inverse
 
 # **How** to use Git & GitHub
@@ -363,6 +367,9 @@ Here's a diagram to help you imagine what we just did:
 ---
 
 ![git working area diagram](git-diagram.png)
+---
+class: middle, center
+#Questions or Comments?
 
 ---
 class: middle, center, inverse
@@ -371,7 +378,8 @@ class: middle, center, inverse
 ##branching and requesting pulls
 
 ---
-
+class: middle, center
+#Questions or Comments?
 
 
 
