--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Pretty much everything I said just now:
 1. Track work, simplify things
   - ex) no more of these:
 
-![Dirty workspace](dirty-workspace.png)
+![Dirty workspace](images/dirty-workspace.png)
 
 ]
 ---
@@ -219,11 +219,11 @@ Pretty much everything I said just now:
   ### - Professional World
 ]
 .right-column[
-  1. Everyone else uses it - developer ecosystem
-    - ex) Opensource
-  1. Portfolio / LinkedIn for CS peeps
-    - ex) Anyone can see in what and how much you collaborated
-  1. Blog
+1. Everyone else uses it - developer ecosystem
+  - ex) Opensource
+1. Portfolio / LinkedIn for CS peeps
+  - ex) Anyone can see in what and how much you Branchingd
+1. Blog
 ]
 ---
 class: middle, center
@@ -260,7 +260,7 @@ class: middle, center, inverse
 1. Click `Create repository`.
 ]
 ---
-![Create new repo](new-repo.png)
+![Create new repo](images/new-repo.png)
 ---
 .left-column[
   ## Create
@@ -283,11 +283,11 @@ If you made a repo for classwork, you can use this space for the syllabus.
 1. In upper left corner, click `Clone/New`
 1. If you have already signed in, you should see a globe icon. Click it to see your GitHub repos. Choose one and click `OK`.
 1. Set which folder you want to save your repo in.
-1. Check `Bookmark this repository` if it's not.
+1. Check `Bookmark this repository` if it's not checked.
 1. Click `Clone`.
 ]
 ---
-![Clone repo](clone-repo.png)
+![Clone repo](images/clone-repo.png)
 ---
 .left-column[
   ## Create
@@ -297,7 +297,9 @@ If you made a repo for classwork, you can use this space for the syllabus.
 .right-column[
 Check to see if you have the README.md file inside the folder.
 
-You have successfully cloned your remote repository into your computer!
+If you see it, it means you have successfully cloned your remote repository into your computer!
+
+Now we can make new files or edit files inside the folder.
 ]
 ---
 class: middle, center, inverse
@@ -308,15 +310,44 @@ class: middle, center, inverse
   ### - stage files
 ]
 .right-column[
-  First step is to edit your files. Make some random files or edit ones you already have.
+  First step is to edit your files. Make some random files or edit ones you already have. 
 
-  When you create, edit, or delete files, the change will show up automatically in SourceTree.
+  If you don't know what to do, take a selfie and put the picture in your folder. 
 
-  Let's `stage` it. This is the process of cherry-picking which files you want to update and which ones you want to ignore. The good thing about ignoring files is that you don't get dirty files that are in the middle of the sentence or a photo of yourself. (why would you have that tho)
+  Or type this into your README: 
+  ```
+  This repository was made against my will. Simon forced me to make it.
+  ```
 
-  For example, let's create a text file with my secret identity in it and then ignore it in SourceTree.
+  When you create, edit, or delete files, SourceTree (our git program) detects changes using magic.
+
+]
+---
+.left-column[
+  ## Edit
+  ### - stage files
+]
+.right-column[
+
+  If you think it's time to upload to GitHub (or Google Drive) `stage` it by clicking `stage all`.
+
+  ![press stage all](images/before-staging.png)
+
+  This is the process of **cherry-picking which changes you want to keep** and which ones you want to ignore. 
+
+  The good thing about ignoring files is that you don't have to update files if you're still in the middle of the sentence, or if you don't want to upload a photo of yourself. (why would you have that tho)
 ]
 
+---
+.left-column[
+  ## Edit
+  ### - stage files
+]
+.right-column[
+  #Demo Time!
+
+  Let's create a text file with my secret identity in it and then ignore it in SourceTree.
+]
 ---
 .left-column[
   ## Edit
@@ -341,7 +372,7 @@ class: middle, center, inverse
 .right-column[
 Once you made a commit, check the `History` tab of SourceTree. You can track all the changes you made. 
 
-This function is similar to Google Docs's but you can keep it organized in a more systematic manner.
+This function is similar to Google Docs's but you can keep it organized more systematically.
 
 I'll talk about it later if I have time but this function is especially good for tracking whose change messed up the entire project. If that happens, we can always revert the changes.
 ]
@@ -366,7 +397,7 @@ Here's a diagram to help you imagine what we just did:
 ]
 ---
 
-![git working area diagram](git-diagram.png)
+![git working area diagram](images/git-diagram.png)
 ---
 class: middle, center
 #Questions or Comments?
@@ -378,9 +409,183 @@ class: middle, center, inverse
 ##branching and requesting pulls
 
 ---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+Before we mess up other people's repositories, let's see which functions we'll use.
+
+The first is **branching.** I can work on separate aspects of the same project, and each can grow in different directions. To put this sentence into context imagine a giant robot.
+![building a 60m tall robot](images/robot.bmp)
+]
+---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+A robot project can have different branches, each working on different limbs. Later when all the limbs are finished, we can merge them together.
+
+![branching is analogous to building a 60m tall robot](images/robot-collaborate.bmp)
+
+]
+---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+If we're talking about intro to CS, all the branches would have the functions main() and draw(), but specific parts of the functions can look different.
+
+For example, if I'm making a poopdodger game, 
+- Me: PowerUp() function that changes settings of character.
+- My partner: GameOver() function that saves the highscore.
+
+![poopdodger instructions](images/poopdodger-instructions.png)
+]
+
+---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+So let's do it. Click on the `branch` button on the ribbon menu. 
+
+![branching](images/branching.png)
+
+The `current branch` will be copied with the name specified in `new branch`. 
+]
+
+
+---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+So let's do it. Click on the `branch` button on the ribbon menu. 
+
+![branching](images/branching.png)
+
+The `current branch` will be copied with the name specified in `new branch`. 
+
+You can name it specifically like above <br>
+(keywords: master, dev, features, debug ...)
+
+**unprofessional alert!** Or you can name it like how I did it for my last assignment  <br>
+(keywords: simon-branch, khaled-branch) 
+]
+
+
+---
+.left-column[
+  ## Branching
+  ### - branch
+]
+.right-column[
+Now make some changes to your files and commit/push.
+
+If you ran out of random creative ideas, try:
+
+```html
+features/poop-dealt
+
+This branch is for implementing the PoopDealt() function.
+TBH, Simon's game is a bit too dirty.
+```
+]
+---
+.left-column[
+  ## Branching
+  ### - branch
+  ### - merge
+]
+.right-column[
+We made Gundam's legs and arms separately, and now it's time to glue them together using `merge`.
+
+1. Double click a branch to select the one that you want to be the main branch. Often the main branch you'll merge into is called `master`.
+2. Select the branch that will be fused into your main branch. Click OK.
+
+After this, you won't be able to see Gundam's arms and legs on the list anymore since they were merged into the whole body.
+]
+---
+.left-column[
+  ## Collaborate
+  ### - branch
+  ### - merge
+]
+.right-column[
+Let's see what you just did:
+
+![branch and merge](images/branches.png)
+
+1. You made a branch, which is a copy of the main branch.
+1. You made some edits or implemented some stuff.
+1. You merged the branch back into the bigger branch.
+]
+---
 class: middle, center
 #Questions or Comments?
+---
+.left-column[
+  ## Collaborate
+  ### - collaborator
+]
+.right-column[
+Now time for real collaboration. (Which is only a few clicks different) There are different ways to do this. Here's one way.
+1. Add your partner as a collaborator in your repository > settings > collaborators
 
+This grants your partner permission to contribute to your repository.
+
+]
+---
+![fork](images/fork.png)
+---
+.left-column[
+  ## Collaborate
+  ### - collaborator
+  ### - branch
+]
+.right-column[
+1. Accept your partner's invite by going to notifications
+
+1. Clone the repository to your computer. If you don't remember how to clone, go to [slide #17](#17).
+
+1. Create a branch. If you don't remember how to branch, go to [slide #34](#34).
+
+1. Make some edits, commit, and push from SourceTree.
+]
+
+---
+.left-column[
+  ## Collaborate
+  ### - collaborator
+  ### - branch
+  ### - pull request & merge
+]
+.right-column[
+1. Go to the repository page on GitHub and make a Pull Request.
+
+![pull request](images/pull-request.png)
+
+This means you are requesting to the owner to merge your edits into a branch. 
+
+If the owner likes it, they can keep it by merging. Since you are a collaborator, you also have owner power. You can approve your own pull request.
+
+]
+
+---
+.left-column[
+  ## Collaborate
+  ### - collaborator
+  ### - branch
+  ### - pull request & merge
+]
+.right-column[
+By keeping this rule: **branch, pull request, merge**, you can keep everything organized!
+]
 
 
 ---
