edit css to example.html

--- a/example.html
+++ b/example.html
@@ -18,6 +18,9 @@
         font-weight: 400;
         margin-bottom: 0;
       }
+      .iamlegend {
+        background:rgb(0, 0, 0)
+      }
       .remark-slide-content h1 { font-size: 3em; }
       .remark-slide-content h2 { font-size: 2em; }
       .remark-slide-content h3 { font-size: 1.6em; }
